--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1414,11 +1414,11 @@
             "settings": {
               "image": "shopify:\/\/shop_images\/two-dogs.jpg",
               "pretext": "",
-              "title": "Rewards",
-              "subtitle": "",
+              "title": "JACK'S PACK",
+              "subtitle": "<p>Loyalty rewarded.<\/p>",
               "pretext_color": "#000000",
-              "heading_color": "#ffffff",
-              "subheading_color": "#000000",
+              "heading_color": "#ebeae4",
+              "subheading_color": "#dddbd2",
               "text_alignment": "center",
               "text_horizontal_position": "center",
               "text_vertical_position": "middle",
@@ -1427,10 +1427,11 @@
               "border_color": "#ffffff",
               "border_width": 0,
               "text_width": 40,
-              "button_1": "",
-              "button_1_style": "button--secondary",
+              "button_1": "Join the pack",
+              "button_1_link": "\/account\/register",
+              "button_1_style": "button--primary",
               "button_2": "",
-              "button_2_style": "button--secondary",
+              "button_2_style": "button--primary",
               "mobile_image_crop": "none",
               "mobile_text_below_image": false,
               "pretext_color_mobile": "rgba(0,0,0,0)",
@@ -1583,6 +1584,29 @@
               "padding_right": 0,
               "animation": "none"
             }
+          },
+          "3599ed70-d919-4e34-8841-45d7bba893b7": {
+            "type": "image_with_text",
+            "settings": {
+              "image_position": "left",
+              "image": "shopify:\/\/shop_images\/create-account.png",
+              "image_crop": "none",
+              "title": "Create an account",
+              "heading_size": "regular",
+              "text": "<p>Signing up is easy and fast. Just enter your email and you’re ready to go.<\/p>",
+              "button_label": "Join the pack",
+              "link": "\/account\/register",
+              "button_style": "button--primary",
+              "alignment": "left",
+              "vertical_position": "center",
+              "background": "rgba(0,0,0,0)",
+              "text_color": "rgba(0,0,0,0)",
+              "width": "standard",
+              "show_gutter": true,
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "animation": "none"
+            }
           }
         },
         "block_order": [
@@ -1591,7 +1615,8 @@
           "1564166889018",
           "8549dc68-420c-4826-87cf-e44ae031c84e",
           "a7c78d5e-80b3-4ede-ae42-0861ddededce",
-          "54065417-28ea-4fe1-8738-377d83ab7da2"
+          "54065417-28ea-4fe1-8738-377d83ab7da2",
+          "3599ed70-d919-4e34-8841-45d7bba893b7"
         ],
         "settings": {
           "css_class": "",
@@ -2772,6 +2797,245 @@
       "product__reviews": {
         "type": "product__reviews",
         "settings": {
+        }
+      },
+      "page-rewards__main": {
+        "type": "page-rewards__main",
+        "blocks": {
+          "page-rewards__main-0": {
+            "type": "image_with_overlay",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/smile-cover--blank.jpg",
+              "pretext": "",
+              "title": "JACK'S PACK",
+              "subtitle": "<p>Loyalty rewarded.<\/p>",
+              "pretext_color": "#000000",
+              "heading_color": "#ebeae4",
+              "subheading_color": "#dddbd2",
+              "text_alignment": "center",
+              "text_horizontal_position": "center",
+              "text_vertical_position": "middle",
+              "background_color": "#ffffff",
+              "background_opacity": 0,
+              "border_color": "#ffffff",
+              "border_width": 0,
+              "text_width": 40,
+              "button_1": "Join the pack ➞",
+              "button_1_link": "\/account\/register",
+              "button_1_style": "button--primary",
+              "button_2": "",
+              "button_2_style": "button--secondary",
+              "mobile_image_crop": "none",
+              "mobile_text_below_image": true,
+              "pretext_color_mobile": "rgba(0,0,0,0)",
+              "heading_color_mobile": "rgba(0,0,0,0)",
+              "subheading_color_mobile": "rgba(0,0,0,0)",
+              "width": "wide",
+              "padding_top": 0,
+              "padding_bottom": 0,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
+            }
+          },
+          "page-rewards__main-2": {
+            "type": "rich_text",
+            "settings": {
+              "title": "",
+              "heading_font": "open_sans_n4",
+              "heading_color": "rgba(0,0,0,0)",
+              "heading_alignment": "center",
+              "heading_size": 30,
+              "text": "<p><strong>Sign up<\/strong><\/p><p>Sign up for a free account today to start earning rewards.<\/p><p><strong>Start earning <\/strong> <\/p><p>Earn 5 Pack Points for every $1 you spend at gosun.co and even more for sharing on social media.<\/p><p><strong>Unlock rewards  <\/strong><\/p><p>Redeem your Shine Points to earn to unlock discounts at checkout and exclusive gear.<\/p>",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
+              "text_alignment": "left",
+              "text_size": 20,
+              "columns": 3,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "#ebeae4",
+              "gradient": "#ebeae4",
+              "gradient_rotation": 180,
+              "width": "wide",
+              "padding_top": 20,
+              "padding_bottom": 0,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
+            }
+          },
+          "3e65a817-2113-4df2-926a-d194958e1330": {
+            "type": "logo_image",
+            "settings": {
+              "icon_label_1": "truck",
+              "title_1": "Icon with text",
+              "text_1": "<p>Describe the feature, service or product that this icon represents.<\/p>",
+              "icon_label_2": "truck",
+              "title_2": "Icon with text",
+              "text_2": "<p>Describe the feature, service or product that this icon represents.<\/p>",
+              "icon_label_3": "truck",
+              "title_3": "Icon with text",
+              "text_3": "<p>Describe the feature, service or product that this icon represents.<\/p>"
+            }
+          },
+          "6ff85e5d-828d-45a8-98bf-3b5af2226a88": {
+            "type": "image_with_text",
+            "settings": {
+              "image_position": "left",
+              "image": "shopify:\/\/shop_images\/create-account.jpg",
+              "image_crop": "none",
+              "title": "Getting started is easy.",
+              "heading_size": "large",
+              "text": "<p>Signing up is easy and fast. Just enter your email and you’re ready to go.<\/p>",
+              "button_label": "Create my account ➞",
+              "link": "\/account\/register",
+              "button_style": "button--primary",
+              "alignment": "left",
+              "vertical_position": "center",
+              "background": "rgba(0,0,0,0)",
+              "text_color": "rgba(0,0,0,0)",
+              "width": "standard",
+              "show_gutter": true,
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "animation": "none"
+            }
+          },
+          "f519f612-24a0-4047-a171-bc2dfe9e84ba": {
+            "type": "rich_text",
+            "settings": {
+              "title": "Earn 5 Pack Points for every $1 spent",
+              "heading_font": "open_sans_n4",
+              "heading_color": "#dddbd2",
+              "heading_alignment": "center",
+              "heading_size": 30,
+              "text": "",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
+              "text_alignment": "left",
+              "text_size": 14,
+              "columns": 2,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "#000000",
+              "gradient": "rgba(0,0,0,0)",
+              "gradient_rotation": 180,
+              "width": "half",
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
+            }
+          },
+          "bd8406c8-2339-4beb-b691-253e34e48bb3": {
+            "type": "rich_text",
+            "settings": {
+              "title": "50 Pack Points = $1 off your order",
+              "heading_font": "open_sans_n4",
+              "heading_color": "#dddbd2",
+              "heading_alignment": "center",
+              "heading_size": 20,
+              "text": "",
+              "text_font": "open_sans_n4",
+              "text_color": "rgba(0,0,0,0)",
+              "text_alignment": "left",
+              "text_size": 14,
+              "columns": 2,
+              "button_label": "",
+              "button_alignment": "center",
+              "button_style": "button--primary",
+              "background": "#000000",
+              "gradient": "rgba(0,0,0,0)",
+              "gradient_rotation": 180,
+              "width": "half",
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "padding_left": 0,
+              "padding_right": 0,
+              "animation": "none"
+            }
+          },
+          "9dfe1d22-c12c-4262-a738-374902978ab1": {
+            "type": "image_with_text",
+            "settings": {
+              "image_position": "right",
+              "image": "shopify:\/\/shop_images\/referral-program.jpg",
+              "image_crop": "none",
+              "title": "Spread the love.",
+              "heading_size": "large",
+              "text": "<p>Give your friends a reward and claim your own when they make a purchase.<\/p>",
+              "button_label": "Get started ➞",
+              "link": "\/account\/register",
+              "button_style": "button--primary",
+              "alignment": "left",
+              "vertical_position": "center",
+              "background": "rgba(0,0,0,0)",
+              "text_color": "rgba(0,0,0,0)",
+              "width": "standard",
+              "show_gutter": true,
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "animation": "none"
+            }
+          },
+          "22a9797b-09b0-4422-b6fe-c4d0f06a236e": {
+            "type": "divider",
+            "settings": {
+              "divider_style": "long",
+              "divider_width": 5,
+              "divider_color": "#ebeae4",
+              "alignment": "center",
+              "width": "standard",
+              "padding_top": 60,
+              "padding_bottom": 60,
+              "animation": "none"
+            }
+          },
+          "8bb2776a-7f0f-415d-aa34-67b42afd4e01": {
+            "type": "gallery",
+            "settings": {
+              "image1": "shopify:\/\/shop_images\/social-2_97511094-73fb-4517-b09f-d074cd244669.jpg",
+              "hide1": false,
+              "image2": "shopify:\/\/shop_images\/social-4.jpg",
+              "hide2": false,
+              "image3": "shopify:\/\/shop_images\/social-5.jpg",
+              "hide3": false,
+              "image4": "shopify:\/\/shop_images\/social-1.jpg",
+              "hide4": false,
+              "image5": "shopify:\/\/shop_images\/social-3.jpg",
+              "hide5": true,
+              "gallery_type": "masonry",
+              "crop_images": true,
+              "images_per_row": 2,
+              "enable_lightbox": true,
+              "overlay_color": "#000000",
+              "link_color": "#FFFFFF",
+              "width": "standard",
+              "show_gutter": true,
+              "padding_top": 20,
+              "padding_bottom": 20,
+              "animation": "none"
+            }
+          }
+        },
+        "block_order": [
+          "page-rewards__main-0",
+          "page-rewards__main-2",
+          "3e65a817-2113-4df2-926a-d194958e1330",
+          "6ff85e5d-828d-45a8-98bf-3b5af2226a88",
+          "f519f612-24a0-4047-a171-bc2dfe9e84ba",
+          "bd8406c8-2339-4beb-b691-253e34e48bb3",
+          "9dfe1d22-c12c-4262-a738-374902978ab1",
+          "22a9797b-09b0-4422-b6fe-c4d0f06a236e",
+          "8bb2776a-7f0f-415d-aa34-67b42afd4e01"
+        ],
+        "settings": {
+          "css_class": "",
+          "custom_css": ""
         }
       }
     },
