Add download app on Google Play + Apple Store

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1565,7 +1565,7 @@
               "heading_color": "rgba(0,0,0,0)",
               "heading_alignment": "left",
               "heading_size": 30,
-              "text": "<p>Redeem your Shine Points to earn to unlock discounts at checkout and exclusive gear.<\/p>",
+              "text": "<p>Redeem your Pack Points to earn to unlock discounts at checkout and exclusive gear.<\/p>",
               "text_font": "open_sans_n4",
               "text_color": "rgba(0,0,0,0)",
               "text_alignment": "left",
